<resources>
    <string name="app_name">Profiler</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_welcome">Welcome to Profile</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="hint_email">example@example.com</string>
    <string name="hint_password">123456</string>
    <string name="btn_text_login">Login</string>
    <string name="btn_text_create_account">Register</string>
</resources>
